--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>lit-html prop</title>
   </head>
   <body>
-    <my-root>
-      <my-element foo="something"></my-element>
-      <hr>
-      <my-element bar="something else"></my-element>
-    </my-root>
+    <h1>Todo App</h1>
 
-    <script type="module" src="/src/main.js"></script>
+    <h2>List User 1</h2>
+    <todo-app user="1"></todo-app>
+
+    <h2>List User 2</h2>
+    <todo-app user="2"></todo-app>
+
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
